--- a/testsite/index.html
+++ b/testsite/index.html
@@ -18,10 +18,10 @@ let pngBuffer;
 let status;
 let pngdumpObject;
 
-Module.onRuntimeInitialized = _ => {
+pngdump().then(Module => {
 	status = document.getElementById('status');
 	status.innerText = "starting";
-	const pngdump = {
+	const api = {
 		version: Module.cwrap('version', 'number', []),
 		mallocBuffer: Module.cwrap('mallocBuffer', 'number', ['number']),
 		freeBuffer: Module.cwrap('freeBuffer', '', ['number']),
@@ -51,23 +51,23 @@ Module.onRuntimeInitialized = _ => {
 	.then(buffer => {
 		status.innerText = "calculating";
 		pngBuffer = buffer;
-		let pngData = pngdump.mallocBuffer(pngBuffer.byteLength);
+		let pngData = api.mallocBuffer(pngBuffer.byteLength);
 		const pngArray = new Uint8Array(pngBuffer);
 		Module.HEAP8.set(pngArray, pngData);
 
-		const png_ptr = pngdump.png_create_read_struct();
-		const info_ptr = pngdump.png_create_info_struct(png_ptr);
+		const png_ptr = api.png_create_read_struct();
+		const info_ptr = api.png_create_info_struct(png_ptr);
 
-		const emulator = pngdump.makeFileEmulator(pngData, pngBuffer.byteLength);
-		pngdump.readHeader(png_ptr, info_ptr, emulator);
+		const emulator = api.makeFileEmulator(pngData, pngBuffer.byteLength);
+		api.readHeader(png_ptr, info_ptr, emulator);
 
 		const sizeOfFloat = 4;
-		const width = pngdump.png_get_image_width(png_ptr, info_ptr);
-		const height = pngdump.png_get_image_height(png_ptr, info_ptr);
+		const width = api.png_get_image_width(png_ptr, info_ptr);
+		const height = api.png_get_image_height(png_ptr, info_ptr);
 		const pixelSize = width * height;
 		const pixelSizeBytes = pixelSize * sizeOfFloat;
-		const pixelPointer = pngdump.mallocBuffer(pixelSizeBytes);
-		const pixelCount = pngdump.readToFloatArray(png_ptr, info_ptr, pixelPointer);
+		const pixelPointer = api.mallocBuffer(pixelSizeBytes);
+		const pixelCount = api.readToFloatArray(png_ptr, info_ptr, pixelPointer);
 		const pixelChars = new Uint8Array(Module.HEAP8.slice(pixelPointer, pixelPointer + pixelSizeBytes));
 		const pixelArray = new Float32Array(pixelChars.buffer);
 
@@ -97,13 +97,12 @@ Module.onRuntimeInitialized = _ => {
 
 		
 
-		pngdump.destroyFileEmulator(emulator);
-		pngdump.freeBuffer(pixelPointer);
-		pngdump.freeBuffer(pngData);
+		api.destroyFileEmulator(emulator);
+		api.freeBuffer(pixelPointer);
+		api.freeBuffer(pngData);
 
 	});
-
-}
+});
 </script>   
 
 </body>
